// Vitest Snapshot v1

exports[`HeadMenu > props > :active 1`] = `
<div
  class="t-menu t-head-menu t-menu--light"
>
  <div
    class="t-head-menu__inner"
  >
    <ul
      class="t-menu"
    />
  </div>
</div>
`;

exports[`HeadMenu > props > :height 1`] = `
<div
  class="t-menu t-head-menu t-menu--light"
  height="750px"
>
  <div
    class="t-head-menu__inner"
  >
    <ul
      class="t-menu"
    />
  </div>
</div>
`;

exports[`HeadMenu > props > :theme 1`] = `
<div
  class="t-menu t-head-menu t-menu--light"
>
  <div
    class="t-head-menu__inner"
  >
    <ul
      class="t-menu"
    />
  </div>
</div>
`;

exports[`HeadMenu > slot > <default> 1`] = `
<div
  class="t-menu t-head-menu t-menu--light"
>
  <div
    class="t-head-menu__inner"
  >
    <ul
      class="t-menu"
    >
      <div />
    </ul>
  </div>
</div>
`;

exports[`HeadMenu > slot > <logo> 1`] = `
<div
  class="t-menu t-head-menu t-menu--light"
>
  <div
    class="t-head-menu__inner"
  >
    <div
      class="t-menu__logo"
    >
      <div />
    </div>
    <ul
      class="t-menu"
    />
  </div>
</div>
`;

exports[`HeadMenu > slot > <options> 1`] = `
<div
  class="t-menu t-head-menu t-menu--light"
>
  <div
    class="t-head-menu__inner"
  >
    <ul
      class="t-menu"
    />
    <div
      class="t-menu__operations"
    >
      <div />
    </div>
  </div>
</div>
`;
